fix scroll glitch hero on mobile + added snippet section-WiP

--- a/src/display/components/ToggleButton/index.css
+++ b/src/display/components/ToggleButton/index.css
@@ -5,7 +5,6 @@
     display: block;
     background: lightgray;
     border-radius: 30px;
-    box-sizing: content-box;
     padding: 3px;
     perspective: 3000px;
     box-sizing: unset !important;
